fix: last register box hidden behind z-index

--- a/component/Sales.styl
+++ b/component/Sales.styl
@@ -526,6 +526,7 @@ body.scrolled
     overflow hidden
   section.last
     position absolute
+    z-index 5
     bottom 400px
     top auto
     min-height 100px
